<resources>
    <string name="app_name">PinyinDemo2</string>
    <string name="ime_name">谷歌拼音输入法</string>
    <string name="ime_settings_activity_name">谷歌拼音输入法设置</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards.-->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>

    <string name="setting">谷歌拼音输入法设置</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_title">联想输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>

    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>

    <string name="setting_others">其它设置</string>
    <string name="setting_others_summary">词典同步等</string>
    <string name="action_settings"></string>
</resources>
